# Agent-Meet

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE_GUIDE.md  CONTINUE_PROMPT.md  Dockerfile  PROJECT.md  PROJECT_DOC.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.ps1
app/: config.py  main.py
app/common/: exception.py  llm_client.py  metrics.py  prompt_loader.py  result.py
app/database/: engine.py
app/mcp/: __init__.py  __main__.py  server.py
app/models/: interview.py  knowledge_base.py  memory.py  resume.py
app/modules/interview/: knowledge_base.py  question_service.py  router.py  session_service.py  skill_service.py
app/modules/interview/graph/: agent.py  graph_builder.py  memory.py  planner.py  service.py  state.py  tools.py
app/modules/interview/prompts/templates/: agent_decision_context.j2  agent_evaluate_single.j2  agent_follow_up.j2  agent_hint.j2  agent_memory_summary.j2  agent_planner.j2  agent_resume_analysis.j2  agent_system.j2  interview_question_resume_system.j2  interview_question_resume_user.j2  interview_question_skill_system.j2  interview_question_skill_user.j2
app/modules/knowledgebase/: router.py  upload_service.py  vector_service.py
app/modules/resume/: router.py  service.py
app/schemas/: interview.py  knowledge_base.py  resume.py
frontend/: index.html
frontend/js/: api.js  app.js
output/: gen_resume.py
tests/: conftest.py  test_agent_integration.py  test_tools.py
