[project]
name = "agent-meet"
version = "0.1.0"
description = "基于 LangGraph 的 AI 模拟面试 Agent 系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "openai>=1.60.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "chardet>=5.0.0",
    "PyYAML>=6.0",
    "pgvector>=0.3.0",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
